--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
     <title>Coding Quiz Challenge</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
     <section class="section1">
         <h1 class="title">Coding Quiz Challenge</h1>
         <p>Try to answer the following code-realted questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by 10 seconds</p>
+    </section>    
 
     <section class="section2">
         <h1 class="question1">Commonly used data types do not include:</h1>
@@ -79,7 +81,7 @@
     <section class="section8">
         <h3 class="High Scores">High Scores</h2>
         <ul>
-            <li><button type="submit">Go back</button></li>
+            <li><a href=".section1">Go back</a></li>
             <li><button type="reset">Clear high scores</button></li>
         </ul>
     </section>
